--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -13,6 +14,7 @@
     "hbs": "~4.0.1",
     "jquery": "^3.1.1",
     "morgan": "~1.7.0",
+    "nodemon": "^1.11.0",
     "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
