updating node version in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "restapi",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "engines": {
+    "node": "4.4.0"
+  },
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
