--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "restapi",
   "version": "0.0.1",
   "private": true,
+  "engine": {
+    "node": "4.4.0"
+  },
   "scripts": {
     "start": "nodemon ./bin/www"
   },
