--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "~1.15.2",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-vue": "^4.0.9",
     "hbs": "~4.0.1",
     "https": "^1.0.0",
     "jquery": "^3.1.1",
